--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,43 @@
+/*GLOBAL STYLES*/
+p {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 300;
+}
+
+.container #our_story {
+
+}
+#our_story {
+  min-height: 600px;
+  display: flex;
+  align-items: center;
+}
+#our_story h1 {
+  font-family: 'Lobster', cursive;
+  font-size: 6em;
+  color: #f8512f;
+  text-shadow: 1px 1px 5px #0a0a0a;
+}
+#our_story h3 {
+  font-family: 'Raleway', serif;
+  font-weight: 700;
+  font-size: 2em;
+  margin-top: 0px;
+}
+#our_story h2 {
+  font-family: 'Playfair Display', serif;
+  font-weight: 700;
+  font-size: 12em;
+  color: rgba(149, 147, 147, 0.2);
+  position: absolute;
+  z-index: -1;
+}
+
+/*NAVBAR STYLES*/
 .navbar-default {
   background-color: transparent;
   border-color: transparent;
 }
-
 .navbar-default .navbar-nav>.active>a,
 .navbar-default .navbar-nav>.active>a:focus,
 .navbar-default .navbar-nav>.active>a:hover {
